--- a/Frontend/react-flask-app/public/index.html
+++ b/Frontend/react-flask-app/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -39,5 +42,38 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="mydiv"></div>
+    <script type="text/babel">
+      class App extends React.Component {
+  constructor() {
+    super();
+    this.state = { data: [] };
+  }
+
+  async componentDidMount() {
+    const response = await fetch('http://127.0.0.1:5000/get_lowest_temp');
+    const json = await response.json();
+    this.setState({ data: json });
+  }
+
+  render() {
+    var text = [];
+    console.log(this.state.data)
+    for( let prop in this.state.data ){
+      text.push([prop, this.state.data[prop]]) ; 
+  }
+    
+    return (
+      <table border="1" align="center">
+      {text.map(function(key, value) {
+        // return <tr><td>{key[0]}</td><td>{key[1]}</td></tr>
+        return <tbody><td>{key[0]}</td> <td>{key[1]}</td></tbody>
+      })}
+      </table>
+    );
+  }
+}
+    ReactDOM.render(<App />, document.getElementById('mydiv'))
+    </script>
   </body>
 </html>
